--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <style>
         /* Hero Section */
         .hero {
-            background: url('https://placehold.co/1920x800') center/cover no-repeat;
-            height: 100vh;
+            /* background: url('https://placehold.co/1920x800') center/cover no-repeat; */
+            background: url('/img/banner_no_letter.png') center/cover no-repeat;
+            background-size: cover;
+            height: 65vh;
             color: white;
             display: flex;
             align-items: center;
@@ -41,9 +43,11 @@
         }
         .btn-oprimary{
             background-color: #fea000;
+            color: #fff;
         }
         .btn-oprimary:hover{
             background-color: #fea000;
+            color: #333;
         }
         .whatsapp-float:hover {
             transform: scale(1.1);
@@ -63,117 +67,116 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#produtos">Produtos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#depoimentos">Depoimentos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#depoimentos">Avaliações</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#instagram">Instagram</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero d-flex flex-column justify-content-center align-items-center text-center">
-        <div data-aos="zoom-in">
-            <img src="img/1.png" class="img-fluid" width="250vw">
-        </div>
-        <div data-aos="fade-up">
-            <h1 class="display-4 fw-bold">Enxergue o Mundo com Clareza</h1>
-            <p class="lead">Óculos modernos para todos os estilos.</p>
-            <a href="#produtos" class="btn btn-oprimary btn-lg">Veja mais!</a>
+    <header class="hero mt-5 d-flex flex-column justify-content-center align-items-center text-center">
+        <div class="w-50" data-aos="fade-up">
+            <p class="lead">AGENDE SUA CONSULTA CONOSCO E RECEBA</p>
+            <h1 class="display-4 fw-bold">DESCONTOS ESPECIAIS EM ARMAÇÕES E LENTES</h1>
+            <!-- <a href="#produtos" class="btn btn-oprimary btn-lg">Veja mais!</a> -->
         </div>
     </header>
-
-    <!-- Produtos -->
-    <section id="produtos" class="container py-5">
-        <h2 class="text-center mb-4" data-aos="fade-down">Nossos Óculos</h2>
-        <div class="row row-gap-3">
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="card shadow">
-                    <img src="https://placehold.co/300x200" class="card-img-top" alt="Óculos 1">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Óculos Clássico</h5>
-                        <p class="card-text">Elegante e sofisticado para todas as ocasiões.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="card shadow">
-                    <img src="https://placehold.co/300x200" class="card-img-top" alt="Óculos 2">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Óculos Moderno</h5>
-                        <p class="card-text">Leve e estiloso, perfeito para o dia a dia.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                <div class="card shadow">
-                    <img src="https://placehold.co/300x200" class="card-img-top" alt="Óculos 3">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Óculos Esportivo</h5>
-                        <p class="card-text">Ideal para atividades ao ar livre.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Depoimentos -->
-    <section id="depoimentos" class="text-bg-dark py-5">
-        <div class="container">
-            <h2 class="text-center mb-4" data-aos="fade-down">O que nossos clientes dizem</h2>
-            <div class="row row-gap-1">
-                <div class="col-md-6" data-aos="fade-right">
-                    <div class="p-4 shadow bg-white text-dark rounded">
-                        <p class="fst-italic">"Óculos incríveis, atendimento nota 10!"</p>
-                        <p class="fw-bold">- João Silva</p>
-                    </div>
-                </div>
-                <div class="col-md-6" data-aos="fade-left">
-                    <div class="p-4 shadow bg-white text-dark rounded">
-                        <p class="fst-italic">"Super leve e confortável, adorei minha nova armação!"</p>
-                        <p class="fw-bold">- Maria Oliveira</p>
-                    </div>
-                </div>
-                <div class="col-md-6" data-aos="fade-left">
-                    <div class="p-4 shadow bg-white text-dark rounded">
-                        <p class="fst-italic">"Super leve e confortável, adorei minha nova armação!"</p>
-                        <p class="fw-bold">- Maria Oliveira</p>
-                    </div>
-                </div>
-                <div class="col-md-6" data-aos="fade-left">
-                    <div class="p-4 shadow bg-white text-dark rounded">
-                        <p class="fst-italic">"Super leve e confortável, adorei minha nova armação!"</p>
-                        <p class="fw-bold">- Maria Oliveira</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Contato -->
     <section id="contato" class="container py-5 text-center">
         <h2 class="mb-4" data-aos="fade-down">Fale Conosco</h2>
-        <p class="lead" data-aos="fade-up">Entre em contato pelo WhatsApp para mais informações.</p>
-        <div>
-            <a href="https://wa.me/5521999999999" class="btn btn-success btn-lg">
-                <i class="bi bi-whatsapp"></i> Londrina
-            </a>
-            <a href="https://wa.me/5521999999999" class="btn btn-success btn-lg">
-                <i class="bi bi-whatsapp"></i> Cambé
-            </a>
-            <a href="https://wa.me/5521999999999" class="btn btn-success btn-lg">
-                <i class="bi bi-whatsapp"></i> Ibiporã
-            </a>
-            <a href="https://wa.me/5521999999999" class="btn btn-success btn-lg">
-                <i class="bi bi-whatsapp"></i> Cornelio
-            </a>
-
+        <p class="lead" data-aos="fade-up">Agende sua Consulta agora mesmo:</p>
+        <div class="d-flex justify-content-center align-items-center gap-4 flex-wrap">
+            <div class="d-flex flex-column">
+                <iframe data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.914164675792!2d-51.157783099999996!3d-23.3188729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb436a54041f4d%3A0x97f1267e864812e8!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030093889!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a href="https://wa.me/message/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
+                    <i class="bi bi-whatsapp"></i> Londrina
+                </a>
+            </div>
+            <div class="d-flex flex-column">
+                <iframe data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.0278962980587!2d-51.28071502543348!3d-23.278436051257515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb59cb1b64e12f%3A0x4bdffd77a9a09f8f!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030316212!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a href="https://wa.me/message/QVZHK4ZYHXQQC1" class="btn btn-oprimary btn-lg">
+                    <i class="bi bi-whatsapp"></i> Cambé
+                </a>
+            </div>
+        </div>
+        <div class="mt-4 d-flex justify-content-center align-items-center gap-4 flex-wrap">
+            
+            <div class="d-flex flex-column">
+                <iframe data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.2791231757496!2d-51.050247925433894!3d-23.269305450926108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47a2ca48fa6f%3A0xc17f716b4cda99b9!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030410394!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a href="https://wa.me/554331589273" class="btn btn-oprimary btn-lg">
+                    <i class="bi bi-whatsapp"></i> Ibiporã
+                </a>
+            </div>
+            <div class="d-flex flex-column">
+                <iframe data-aos="fade-up" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.646755579204!2d-50.6483734!3d-23.1830893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eadfcd021dcaff%3A0xb0f8455d13666004!2s%C3%93tica%20Atual%20Prime!5e0!3m2!1spt-BR!2sbr!4v1741030701598!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a href="https://wa.me/554334021039" class="btn btn-oprimary btn-lg">
+                    <i class="bi bi-whatsapp"></i> Cornelio
+                </a>
+            </div>
         </div>
     </section>
- 
+
+    <!-- Depoimentos --> 
+    <section id="depoimentos" class="text-bg-dark py-5">
+        <div class="container">
+            <h2 class="text-center mb-4" data-aos="fade-down">A Ótica mais bem <strong>AVALIADA</strong> do Google de Londrina e Região.</h2>
+            <div class="row row-gap-4">
+                <div class="col-md-6" data-aos="fade-right">
+                    <div class="p-4 shadow bg-white text-dark rounded">
+                        <p class="fst-italic">Escolhi a ótica atual para fazer meu óculos por indicação da minha sogra e pude comprovar o atendimento incrível que eles oferecem!
+                            Fui atendida pelo Victor, muito simpático e paciente. Já começa que somos recebidos com um capuccino maravilhoso rsrs.
+                            A loja tem infinitas opções de armações e óculos de sol então é praticamente impossível não encontrar um do nosso gosto.
+                            Atendimento nota 10 👏👏👏</p>
+                        <p class="fw-bold">- Amanda Torres</p>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-left">
+                    <div class="p-4 shadow bg-white text-dark rounded">
+                        <p class="fst-italic">"Fomos atendidos pela Celina!!
+                            O atendimento foi excelente desde que chegamos e fomos recebidos com um delicioso cappuccino! Eles têm um sistema de visagismo que é ótimo!!
+                            Ela teve paciência para esperar minha esposa escolher! Nos ofereceu formas de pagamento muito boas!
+                            Enfim!! Excelente!!!"</p>
+                        <p class="fw-bold">- Lucas Emmanuel</p>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-left">
+                    <div class="p-4 shadow bg-white text-dark rounded">
+                        <p class="fst-italic">"Mandei fazer meu óculos de grau e o da minha esposa, com o desconto o preço final ficou bom.quero agradecer o ótimo atendimento da Karina e também da Thalita ,esta loja eu recomendo conhecer..."</p>
+                        <p class="fw-bold">- Jorge Gomes de Oliveira</p>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-left">
+                    <div class="p-4 shadow bg-white text-dark rounded">
+                        <p class="fst-italic">"Gostei bastante, atendente bem atenciosa, me deixou confortável pra decidir e isso é um diferencial...Celina muito obrigada"</p>
+                        <p class="fw-bold">- Ana Paula da Cruz Paulino</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bottom Section -->
+    <section class="container mt-5 rounded-top-4 py-5 text-bg-dark">
+        <div class="d-flex flex-row justify-content-around py-4 flex-wrap gap-2">
+            <img src="img/3.png" class="img-fluid object-fit-contain" width="100vh" data-aos="zoom-in">
+            <div class="d-flex flex-column gap-1" data-aos="fade-down">
+                <p><i class="bi bi-buildings-fill"></i> Nossos endereços</p>
+                <span class="mt-2">- R. Sen. Souza Naves, 726 - Centro, Londrina - PR, 86010-160</span>
+                <span>- Av. Canadá, 84 - Centro, Cambé - PR, 86181-070</span>
+                <span>- Av. Santos Dumont, 43 - Centro, Ibiporã - PR, 86200-000</span>
+                <span>- Av. XV de Novembro, 533 - Centro, Cornélio Procópio - PR, 86300-000</span>
+            </div>
+        </div>
+        <div class="text-center mt-5">
+            <i>© Desenvolvido por <a href="">Tecnobreve Solutions</a> 2025</i>
+        </div>
+    </section>
 
     <!-- Botão WhatsApp Flutuante -->
-    <a href="https://wa.me/5521999999999" class="whatsapp-float" target="_blank">
+    <a href="#contato" class="whatsapp-float">
         <i class="bi bi-whatsapp"></i>
     </a>
 
@@ -185,6 +188,5 @@
     <script>
         AOS.init(); // Inicializa animações AOS
     </script>
-
 </body>
 </html>
