--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="pt-BR">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16570610461');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Óticas Atual - By Vinicius Leme</title>
@@ -18,6 +28,21 @@
 
     <!-- Css Local -->
     <link rel="stylesheet" href="css/style.css">
+    
+    <script>
+        function gtag_report_conversion(url) {
+            var callback = function () {
+                if (typeof (url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-16570610461/-G6MCOqamOYZEJ3mvd09',
+                'event_callback': callback
+            });
+            return false;
+        }
+    </script>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
