feat: Remoção GTag

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </div>
         </div>
         <div class="text-center mt-5">
-            <i>© Desenvolvido por <a href="https://tecnobreve.onrender.com" target="_blank">Tecnobreve</a> 2025</i>
+            <i>© Desenvolvido por <a href="https://tecnobreve.onrender.com" target="_blank">Tecnobreve</a>, 2025</i>
         </div>
     </section>
 
