--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRTZHJTT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+     <!-- Event snippet for Visualização Página conversion page -->
+   
      
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -313,7 +315,9 @@
         AOS.init(); // Inicializa animações AOS
     </script>
     <script async src="//www.instagram.com/embed.js"></script>
-
+    <script>
+        gtag('event', 'conversion', {'send_to': 'AW-16570610461/-G6MCOqamOYZEJ3mvd09'});
+    </script>
 </body>
 
 </html>
