feat: Add an aditional address

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRTZHJTT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-     <!-- Event snippet for Visualização Página conversion page -->
-   
+    </noscript>   
      
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -65,41 +62,47 @@
     <section id="contato" class="container py-5 text-center">
         <h2 class="mb-4" data-aos="fade-down">Fale Conosco</h2>
         <p class="lead" data-aos="fade-up">Agende sua Consulta agora mesmo:</p>
-        <div class="d-flex justify-content-center align-items-center gap-4 flex-wrap">
-            <div class="d-flex flex-column">
+        <div class="d-flex p-4 justify-content-center align-items-center gap-4 flex-wrap">
+            <div class="d-flex flex-column flex-grow-1">
                 <iframe data-aos="fade-up"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.914164675792!2d-51.157783099999996!3d-23.3188729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb436a54041f4d%3A0x97f1267e864812e8!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030093889!5m2!1spt-BR!2sbr"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a href="https://wa.me/message/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Londrina
                 </a>
             </div>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column flex-grow-1">
+                <iframe data-aos="fade-up"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.974259948648!2d-51.16036852467741!3d-23.316692678968614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43674e49770f%3A0x8c7bd46e3b7b9483!2sR.%20Sen.%20Souza%20Naves%2C%20484%20-%203%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086010-160!5e0!3m2!1spt-BR!2sbr!4v1748539641988!5m2!1spt-BR!2sbr" 
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a href="https://wa.me/message/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
+                    <i class="bi bi-whatsapp"></i> Londrina
+                </a>
+            </div>
+            <div class="d-flex flex-column flex-grow-1">
                 <iframe data-aos="fade-up"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.0278962980587!2d-51.28071502543348!3d-23.278436051257515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb59cb1b64e12f%3A0x4bdffd77a9a09f8f!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030316212!5m2!1spt-BR!2sbr"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a href="https://wa.me/message/QVZHK4ZYHXQQC1" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Cambé
                 </a>
             </div>
-        </div>
-        <div class="mt-4 d-flex justify-content-center align-items-center gap-4 flex-wrap">
-
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column flex-grow-1">
                 <iframe data-aos="fade-up"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.2791231757496!2d-51.050247925433894!3d-23.269305450926108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47a2ca48fa6f%3A0xc17f716b4cda99b9!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030410394!5m2!1spt-BR!2sbr"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a href="https://wa.me/554331589273" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Ibiporã
                 </a>
             </div>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column flex-grow-1">
                 <iframe data-aos="fade-up"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.646755579204!2d-50.6483734!3d-23.1830893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eadfcd021dcaff%3A0xb0f8455d13666004!2s%C3%93tica%20Atual%20Prime!5e0!3m2!1spt-BR!2sbr!4v1741030701598!5m2!1spt-BR!2sbr"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a href="https://wa.me/554334021039" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Cornelio
@@ -287,8 +290,9 @@
         <div class="d-flex flex-row justify-content-around py-4 flex-wrap gap-2">
             <img src="img/3.png" class="img-fluid object-fit-contain" width="100vh" data-aos="zoom-in">
             <div class="d-flex flex-column gap-1" data-aos="fade-down">
-                <p><i class="bi bi-buildings-fill"></i> Nossos endereços</p>
-                <span class="mt-2">- R. Sen. Souza Naves, 726 - Centro, Londrina</span>
+                <p class="mb-2"><i class="bi bi-buildings-fill"></i> Nossos endereços</p>
+                <span>- R. Sen. Souza Naves, 726 - Centro, Londrina</span>
+                <span>- Av. Souza Naves, 484 Loja 3 - Centro, Londrina</span>
                 <span>- Av. Canadá, 84 - Centro, Cambé</span>
                 <span>- Av. Santos Dumont, 43 - Centro, Ibiporã</span>
                 <span>- Av. XV de Novembro, 533 - Centro, Corn. Procópio</span>
