--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.914164675792!2d-51.157783099999996!3d-23.3188729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb436a54041f4d%3A0x97f1267e864812e8!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030093889!5m2!1spt-BR!2sbr"
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/554330391309" class="btn btn-oprimary btn-lg">
+                <a href="https://wa.me/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Londrina
                 </a>
             </div>
@@ -77,7 +77,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.974259948648!2d-51.16036852467741!3d-23.316692678968614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43674e49770f%3A0x8c7bd46e3b7b9483!2sR.%20Sen.%20Souza%20Naves%2C%20484%20-%203%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086010-160!5e0!3m2!1spt-BR!2sbr!4v1748539641988!5m2!1spt-BR!2sbr" 
                     height="300" style="border:0;" allowfullscreen="" loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/message/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
+                <a href="https://wa.me/message/554330391309" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Londrina
                 </a>
             </div>
@@ -292,7 +292,7 @@
             <div class="d-flex flex-column gap-1" data-aos="fade-down">
                 <p class="mb-2"><i class="bi bi-buildings-fill"></i> Nossos endereços</p>
                 <span>- R. Sen. Souza Naves, 726 - Centro, Londrina</span>
-                <span>- Av. Souza Naves, 484 Loja 3 - Centro, Londrina</span>
+                <span>- R. Sen. Souza Naves, 484 Loja 3 - Centro, Londrina</span>
                 <span>- Av. Canadá, 84 - Centro, Cambé</span>
                 <span>- Av. Santos Dumont, 43 - Centro, Ibiporã</span>
                 <span>- Av. XV de Novembro, 533 - Centro, Corn. Procópio</span>
