feat: Add a GTAG

--- a/index.html
+++ b/index.html
@@ -319,5 +319,15 @@
         AOS.init(); // Inicializa animações AOS
     </script>
     <script async src="//www.instagram.com/embed.js"></script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16570610461');
+    </script>
 </body>
 </html>
