--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KRTZHJTT');</script>
-    <!-- End Google Tag Manager -->
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Óticas Atual - By Vinicius Leme</title>
@@ -27,11 +19,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRTZHJTT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>   
-     
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -68,7 +55,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.914164675792!2d-51.157783099999996!3d-23.3188729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb436a54041f4d%3A0x97f1267e864812e8!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030093889!5m2!1spt-BR!2sbr"
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/HFN3KNAB66Q3O1" class="btn btn-oprimary btn-lg">
+                <a id="btnAnl" href="https://wa.me/" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Londrina
                 </a>
             </div>
@@ -77,7 +64,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.974259948648!2d-51.16036852467741!3d-23.316692678968614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43674e49770f%3A0x8c7bd46e3b7b9483!2sR.%20Sen.%20Souza%20Naves%2C%20484%20-%203%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086010-160!5e0!3m2!1spt-BR!2sbr!4v1748539641988!5m2!1spt-BR!2sbr" 
                     height="300" style="border:0;" allowfullscreen="" loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/message/554330391309" class="btn btn-oprimary btn-lg">
+                <a id="btnAnl" href="https://wa.me/554330391309" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Londrina
                 </a>
             </div>
@@ -86,7 +73,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.0278962980587!2d-51.28071502543348!3d-23.278436051257515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb59cb1b64e12f%3A0x4bdffd77a9a09f8f!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030316212!5m2!1spt-BR!2sbr"
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/message/QVZHK4ZYHXQQC1" class="btn btn-oprimary btn-lg">
+                <a id="btnAnl" href="https://wa.me/message/QVZHK4ZYHXQQC1" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Cambé
                 </a>
             </div>
@@ -95,7 +82,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.2791231757496!2d-51.050247925433894!3d-23.269305450926108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47a2ca48fa6f%3A0xc17f716b4cda99b9!2s%C3%93tica%20Atual!5e0!3m2!1spt-BR!2sbr!4v1741030410394!5m2!1spt-BR!2sbr"
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/554331589273" class="btn btn-oprimary btn-lg">
+                <a id="btnAnl" href="https://wa.me/554331589273" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Ibiporã
                 </a>
             </div>
@@ -104,7 +91,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.646755579204!2d-50.6483734!3d-23.1830893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eadfcd021dcaff%3A0xb0f8455d13666004!2s%C3%93tica%20Atual%20Prime!5e0!3m2!1spt-BR!2sbr!4v1741030701598!5m2!1spt-BR!2sbr"
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <a href="https://wa.me/554334021039" class="btn btn-oprimary btn-lg">
+                <a id="btnAnl" href="https://wa.me/554334021039" class="btn btn-oprimary btn-lg">
                     <i class="bi bi-whatsapp"></i> Cornelio
                 </a>
             </div>
@@ -303,8 +290,6 @@
         </div>
     </section>
 
-
-
     <!-- Botão WhatsApp Flutuante -->
     <a href="#contato" class="whatsapp-float">
         <i class="bi bi-whatsapp"></i>
@@ -320,14 +305,32 @@
     </script>
     <script async src="//www.instagram.com/embed.js"></script>
     
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+        async function __set(type){
+            await fetch('https://api.hubbix.com.br/analytics/', {
+                method: 'POST',
+                headers: {'Content-Type':'application/json'},
+                body: JSON.stringify({
+                    'type': type,
+                    'unit_id': 1,
+                    'client_id': 2
+                }),
+            })
+        }
+        // Analytics views
+        window.addEventListener('load', async function(){__set('VIEW')})
 
-        gtag('config', 'AW-16570610461');
+        // Analytics clicks
+        const btns = document.querySelectorAll('#btnAnl')
+        btns.forEach(item => {
+            item.addEventListener('click', async function(e){__set('CLICK')})
+        });
+
+        // Analytics forms
+        const forms = document.querySelectorAll('#formAnl')
+        forms.forEach(item => {
+            item.addEventListener('click', async function(e){__set('FORM')})
+        });
     </script>
 </body>
 </html>
