--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero mt-5 d-flex flex-column justify-content-center align-items-center text-center" id="hero">
+    <header class="hero mt-5 d-flex flex-column justify-content-center align-items-start p-5 text-center" id="hero">
         <div class="px-1" style="max-width: 500px;" data-aos="fade-up">
             <p class="lead">AGENDE SUA CONSULTA CONOSCO E RECEBA</p>
             <h1 class="display-6 fw-bold">DESCONTOS ESPECIAIS EM ARMAÇÕES E LENTES</h1>
@@ -47,7 +47,7 @@
 
     <!-- Contato -->
     <section id="contato" class="container py-5 text-center">
-        <h2 class="mb-4" data-aos="fade-down">Fale Conosco</h2>
+        <h2 class="mb-4 subtitle" data-aos="fade-down">Fale Conosco</h2>
         <p class="lead" data-aos="fade-up">Agende sua Consulta agora mesmo:</p>
         <div class="d-flex p-4 justify-content-center align-items-center gap-4 flex-wrap">
             <div class="d-flex flex-column flex-grow-1">
@@ -101,7 +101,7 @@
     <!-- Depoimentos -->
     <section id="depoimentos" class="text-bg-dark py-5">
         <div class="container">
-            <h2 class="text-center mb-4" data-aos="fade-down">A Ótica mais bem <strong>AVALIADA</strong> do Google de
+            <h2 class="text-center mb-4" data-aos="fade-down">A Ótica mais bem <strong class="subtitle">AVALIADA</strong> do Google de
                 Londrina e Região.</h2>
             <div class="row row-gap-4">
                 <div class="col-md-6" data-aos="fade-right">
