--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <!-- Hero Section -->
     <header class="hero mt-5 d-flex flex-column justify-content-center align-items-start p-5 text-center" id="hero">
         <div class="px-1" style="max-width: 500px;" data-aos="fade-up">
-            <p class="lead">AGENDE SUA CONSULTA CONOSCO E RECEBA</p>
-            <h1 class="display-6 fw-bold">DESCONTOS ESPECIAIS EM ARMAÇÕES E LENTES</h1>
+            <h1 class="display-6 fw-bold text-danger">ÓTICAS ATUAL - AGENDE SUA CONSULTA CONOSCO E RECEBA DESCONTOS EXCLUSIVOS.</h1>
         </div>
     </header>
 
