--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero mt-5 d-flex flex-column justify-content-center align-items-start p-5 text-center" id="hero">
+    <header class="hero mt-5 d-flex flex-column justify-content-center align-items-center p-5 text-center" id="hero">
         <div class="px-1" style="max-width: 500px;" data-aos="fade-up">
             <h1 class="display-6 fw-bold text-danger">ÓTICAS ATUAL - AGENDE SUA CONSULTA CONOSCO E RECEBA DESCONTOS EXCLUSIVOS.</h1>
         </div>
