--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Hero Section -->
     <header class="hero mt-5 d-flex flex-column justify-content-center align-items-center p-5 text-center" id="hero">
-        <div class="px-1" style="max-width: 500px;" data-aos="fade-up">
+        <div class="px-1" style="max-width: 500px; background: #fea000;" data-aos="fade-up">
             <p class="display-4 fw-bold">Óticas Atual</p>
             <h1 class="display-6 fw-bold">Agende sua CONSULTA conosco e receba DESCONTOS exclusivos.</h1>
         </div>
