Update Hero, and add fonts

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-  gtag('config', 'AW-16570610461');
-</script>
+        gtag('config', 'AW-16570610461');
+    </script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Óticas Atual - By Vinicius Leme</title>
@@ -48,9 +50,9 @@
 
     <!-- Hero Section -->
     <header class="hero mt-5 d-flex flex-column justify-content-center align-items-center p-5 text-center" id="hero">
-        <div class="px-1" style="max-width: 500px; background: #fea000;" data-aos="fade-up">
-            <p class="display-4 fw-bold">Óticas Atual</p>
-            <h1 class="display-6 fw-bold">Agende sua CONSULTA conosco e receba DESCONTOS exclusivos.</h1>
+        <div class="d-flex p-2 flex-column gap-1" style="max-width: 700px;" data-aos="fade-up">
+            <span class="display-3 fw-bold">ÓTICAS ATUAL</span>
+            <span class="fs-3 fw-bold funnels">Agende sua CONSULTA conosco e receba DESCONTOS exclusivos.</span>
         </div>
     </header>
 
