Updt: Version  #2 update Hero (Mobile and Desktop running) and add person animation

--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'AW-16570610461');
-    </script>
+    <script src="assets/js/gtag.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,6 +111,7 @@
                 </a>
             </div>
         </div>
+        <img src="assets/img/girl_animation.png" width="500" style="transform: translateY(80px);" alt="Oticas Atual Masc." data-aos="fade-down">
     </section>
 
     <!-- Depoimentos -->
@@ -170,8 +165,8 @@
 
     <!-- instagram -->
     <section id="instagram" class="container mt-5 p-2">
-        <div class="d-flex flex-row justify-content-around align-items-center gap-4 p-2">
-            <div class="d-flex border rounded-4 p-4 gap-4 flex-column" data-aos="fade-up">
+        <div class="d-flex flex-row justify-content-around flex-wrap align-items-center gap-4 p-2">
+            <div class="d-flex border rounded-4 p-4 gap-4 flex-column justify-content-center align-items flex-grow-1 flex-basis" data-aos="fade-up">
                 <!-- Informações -->
                 <div class="d-flex flex-row justify-content-center align-items-center gap-4 flex-wrap mt-2">
                     <div class="d-flex flex-row gap-4 align-items-center">
@@ -211,7 +206,8 @@
                                     <div
                                         style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;">
                                     </div>
-                                    <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+                                    <div
+                                        style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
                                         <div
                                             style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;">
                                         </div>
@@ -221,9 +217,9 @@
                                     </div>
                                 </div>
                                 <div style="padding: 19% 0;"></div>
-                                <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg width="50px"
-                                        height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg"
-                                        xmlns:xlink="https://www.w3.org/1999/xlink">
+                                <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg
+                                        width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
+                                        xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
                                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g transform="translate(-511.000000, -20.000000)" fill="#000000">
                                                 <g>
@@ -240,7 +236,8 @@
                                         Ver essa foto no Instagram</div>
                                 </div>
                                 <div style="padding: 12.5% 0;"></div>
-                                <div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;">
+                                <div
+                                    style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;">
                                     <div>
                                         <div
                                             style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(0px) translateY(7px);">
@@ -287,24 +284,27 @@
                                 <a href="https://www.instagram.com/reel/DRA8d5aDEU6/?utm_source=ig_embed&amp;utm_campaign=loading"
                                     style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
                                     target="_blank">Uma publicação compartilhada por Vinicius Leme | Visagista Óptico
-                                    (@byviniciusleme)</a></p>
+                                    (@byviniciusleme)</a>
+                            </p>
                         </div>
                     </blockquote>
                 </div>
             </div>
-            <!-- <div class="d-flex flex-column">
-                <span>Oieeee! Só passando pra te lembrar</span>
-                <span>Que se você usar o nosso cupom</span>
-                <span>Você ganha R$200 de desconto!</span>
-                <img src="assets/img/girl_animation.png" width="300" alt="">
-            </div> -->
+            <div class="d-flex flex-column flex-grow-1 justify-content-center gap-4 p-2 align-items-center flex-basis">
+                <span class="fs-4 fw-bold text-center" data-aos="fade-left">Oie! Só passando pra te <span class="subtitle">lembrar</span>,
+                    que se você usar o nosso cupom. Você ganha <span class="text-primary fs-3">R$200</span> de desconto!</span>
+                <span class="fs-4 fw-bold text-primary text-end w-100 funnels" data-aos="fade-right">#CashbackdeR$200</span>
+                <div class="d-flex justify-content-end flex-grow-1 align-items-end mt-5" data-aos="fade-down">
+                    <img src="assets/img/girl_idle.png" class="img-fluid">
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Bottom Section -->
     <section class="container mt-5 rounded-top-4 py-5 text-bg-dark">
         <div class="d-flex flex-row justify-content-around py-4 flex-wrap gap-2">
-            <img src="assets/img/logo_full_white.png" class="img-fluid object-fit-contain" width="100vh"
+            <img src="assets/img/logo_full_white.png" class="img-fluid object-fit-contain" width="150vh"
                 data-aos="zoom-in">
             <div class="d-flex flex-column gap-1" data-aos="fade-down">
                 <p class="mb-2"><i class="bi bi-buildings-fill"></i> Nossos endereços</p>
