--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 </a>
             </div>
         </div>
-        <img src="assets/img/girl_animation.png" width="500" style="transform: translateY(80px);" alt="Oticas Atual Masc." data-aos="fade-down">
+        <div class="d-flex justify-content-center align-items-center">
+            <img src="assets/img/girl_animation.png" width="500" style="transform: translateY(80px);" alt="Oticas Atual Masc." data-aos="fade-down">
+        </div>
     </section>
 
     <!-- Depoimentos -->
@@ -166,7 +168,7 @@
     <!-- instagram -->
     <section id="instagram" class="container mt-5 p-2">
         <div class="d-flex flex-row justify-content-around flex-wrap align-items-center gap-4 p-2">
-            <div class="d-flex border rounded-4 p-4 gap-4 flex-column justify-content-center align-items flex-grow-1 flex-basis" data-aos="fade-up">
+            <div class="d-flex border rounded-4 p-4 gap-4 flex-column justify-content-center align-items-center flex-grow-1 flex-basis" data-aos="fade-up">
                 <!-- Informações -->
                 <div class="d-flex flex-row justify-content-center align-items-center gap-4 flex-wrap mt-2">
                     <div class="d-flex flex-row gap-4 align-items-center">
